--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
     "require": {
-        "apache/log4php": "2.3.0"
+        "apache/log4php": ">=2.3.0",
+        "phpunit/phpunit": ">=4.8.6"
     }
 }
