--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
     "require": {
         "apache/log4php": ">=2.3.0",
-        "phpunit/phpunit": ">=4.8.6"
+        "phpunit/phpunit": ">=4.8.6",
+        "phpunit/phpunit-skeleton-generator": ">=2.0.1"
     }
 }
