Send Mail after check

--- a/etc/config.json
+++ b/etc/config.json
@@ -14,8 +14,22 @@
     "SubscribersCustomersCount",
     "FindDuplicatedCustomers",
     "FindInvalidCustomers",
+    "NumberOfOrders",
+    "NumberOfProducts",
     "Rewrites",
     "ContactlabAuthApiKey",
     "MemoryLimit"
-  ]
+  ],
+  "mail": {
+    "report_recipients": [
+      {
+        "name": "Andrea Gaspardo",
+        "mail": "andrea.gaspardo@webformat.com"
+      }
+    ],
+    "from": {
+      "name": "Andrea Gaspardo",
+      "mail": "andrea.gaspardo@webformat.com"
+    }
+  }
 }
