Updated config.json with example email
Used John Smith instead of developer email address.

--- a/etc/config.json
+++ b/etc/config.json
@@ -2,13 +2,13 @@
   "mail": {
     "report_recipients": [
       {
-        "name": "Andrea Gaspardo",
-        "mail": "andrea.gaspardo@webformat.com"
+        "name": "John Smith",
+        "mail": "john.smith@example.com"
       }
     ],
     "from": {
-      "name": "Andrea Gaspardo",
-      "mail": "andrea.gaspardo@webformat.com"
+        "name": "John Smith",
+        "mail": "john.smith@example.com"
     }
   }
 }
